--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@systemdesignpartners/cognito-hoc-examples",
-  "version": "1.0.30",
+  "version": "1.1.1",
   "description": "Examples using the withCognitoHUI Higher Order Component for ReactJS (from the cognito-hoc repo)",
   "dependencies": {
-    "@systemdesignpartners/cognito-auth-storage": "^1.0.15",
-    "@systemdesignpartners/cognito-hoc": "^1.0.32",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "@systemdesignpartners/cognito-auth-storage": "^1.1.1",
+    "@systemdesignpartners/cognito-hoc": "^1.1.1",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
