--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@systemdesignpartners/cognito-hoc-examples",
-  "version": "1.1.1",
+  "name": "cognito-hoc-examples",
+  "version": "1.1.2",
   "description": "Examples using the withCognitoHUI Higher Order Component for ReactJS (from the cognito-hoc repo)",
   "dependencies": {
-    "@systemdesignpartners/cognito-auth-storage": "^1.1.1",
-    "@systemdesignpartners/cognito-hoc": "^1.1.1",
+    "cognito-auth-storage": "^1.1.2",
+    "cognito-hoc": "^1.1.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.0.1"
